// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders a brand state with content 1`] = `
<div
  aria-labelledby="divider-25"
  className=""
  role="separator"
>
  <div
    id="divider-25"
  >
    Brand
  </div>
</div>
`;

exports[`Divider renders a content aligned center 1`] = `
<div
  aria-labelledby="divider-28"
  className=""
  role="separator"
>
  <div
    id="divider-28"
  >
    Center
  </div>
</div>
`;

exports[`Divider renders a content aligned end 1`] = `
<div
  aria-labelledby="divider-29"
  className=""
  role="separator"
>
  <div
    id="divider-29"
  >
    End
  </div>
</div>
`;

exports[`Divider renders a content aligned start 1`] = `
<div
  aria-labelledby="divider-27"
  className=""
  role="separator"
>
  <div
    id="divider-27"
  >
    Start
  </div>
</div>
`;

exports[`Divider renders a default divider 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a divider with content 1`] = `
<div
  aria-labelledby="divider-22"
  className=""
  role="separator"
>
  <div
    id="divider-22"
  >
    Default Divider
  </div>
</div>
`;

exports[`Divider renders a divider with different color 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a divider with important 1`] = `
<div
  aria-labelledby="divider-30"
  className=""
  role="separator"
>
  <div
    id="divider-30"
  >
    Important
  </div>
</div>
`;

exports[`Divider renders a divider with inset 1`] = `
<div
  aria-labelledby="divider-23"
  className=""
  role="separator"
>
  <div
    id="divider-23"
  >
    Inset
  </div>
</div>
`;

exports[`Divider renders a horizontal a fixed width 1`] = `
<div
  aria-labelledby="divider-35"
  className=""
  role="separator"
>
  <div
    id="divider-35"
  >
    fixed 100px width
  </div>
</div>
`;

exports[`Divider renders a strong state with content 1`] = `
<div
  aria-labelledby="divider-26"
  className=""
  role="separator"
>
  <div
    id="divider-26"
  >
    Strong
  </div>
</div>
`;

exports[`Divider renders a subtle state with content 1`] = `
<div
  aria-labelledby="divider-24"
  className=""
  role="separator"
>
  <div
    id="divider-24"
  >
    Subtle
  </div>
</div>
`;

exports[`Divider renders a vertical a fixed height 1`] = `
<div
  aria-labelledby="divider-34"
  className=""
  role="separator"
>
  <div
    id="divider-34"
  >
    fixed 100px height
  </div>
</div>
`;

exports[`Divider renders a vertical divider 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a vertical divider with content 1`] = `
<div
  aria-labelledby="divider-33"
  className=""
  role="separator"
>
  <div
    id="divider-33"
  >
    Vertical
  </div>
</div>
`;
